tests/NormalTests/paczka1/fuzzy1/63514472.err
Error in line 3: hMDcE A412 87,2
Error in line 17: A412 S286 80,7
Error in line 14: ZKBjgyqOi1j S762 16,2
Error in line 35: 9QOLuo A942 80,1
Error in line 31: hMDcE A942 83,4
